[package]
name = "barrage"
version = "0.1.0"
edition = "2024"

[dependencies]
assert_cmd = "2.0.17"
clap = { version = "4.5.45", features = ["derive"] }
confy = "1.0.0"
crossterm = "0.29.0"
ctrlc = "3.4.7"
env_logger = "0.11.8"
futures = "0.3.31"
hl7-mllp-codec = "0.4.0"
indicatif = "0.18.0"
log = "0.4.27"
predicates = "3.1.3"
serde = "1.0.219"
serde_derive = "1.0.219"
tokio = { version = "1.47.1", features = ["macros", "net", "rt", "time"] }
tokio-util = "0.7.16"
