[package]
name = "barrage"
version = "0.6.0"
edition = "2024"

authors = ["Jens <rusty.jens@fastmail.com>"]
description = "A command line tool to test the throughput of TCP HL7 message consumers."
repository = "https://github.com/JensPenny/barrage"
readme = "readme.md"
keywords = ["hl7", "healthcare", "cli", "tool"]
categories = ["command-line-utilities"]
license = " GPL-3.0-or-later"

[dependencies]
assert_cmd = "2.0.17"
clap = { version = "4.5.60", features = ["derive"] }
confy = "2.0.0"
crossterm = "0.29.0"
ctrlc = "3.5.2"
env_logger = "0.11.9"
futures = "0.3.32"
hl7-mllp-codec = "0.4.0"
indicatif = "0.18.4"
log = "0.4.27"
predicates = "3.1.4"
serde = "1.0.219"
serde_derive = "1.0.219"
tokio = { version = "1.47.1", features = ["macros", "net", "rt", "time"] }
tokio-util = "0.7.16"
